--- a/social-net-chart/templates/redis/redis-deployment.yaml
+++ b/social-net-chart/templates/redis/redis-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: {{ .Values.redis.image }}
+        image: "{{ .Values.redis.image }}:{{.Values.redis.tag}}"
         ports:
         - containerPort: 6379
         volumeMounts:
@@ -24,15 +24,3 @@ spec:
       volumes:
       - name: redis-data
         emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-  namespace: {{ .Values.namespace }}
-spec:
-  ports:
-  - port: 6379
-    targetPort: 6379
-  selector:
-    app: redis
